[project]
name = "lightning-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["lightning>=2.5.2", "torch>=2.7.1"]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.12.0"]

[tool.setuptools.packages.find]
include = ["lightning_utils*"]
